src/test/deca/context/invalid/langage_sans_objet/troisieme_passe/regle_3_33_1.deca
// Description:
//    regle 3.33 operation partielle type_binary_op
//
// Resultats:
//    Ligne 7: Binary operation '&&' cannot have operands of types : 'int', 'boolean'.
{
    boolean a = 1 && true;
}
// raison operation partielle type_binary_op
// message : Binary operation '&&' cannot have operands of types : 'int', 'boolean'.